--- a/Backend/employee_management_portal/src/main/resources/application.properties
+++ b/Backend/employee_management_portal/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=employee_management_portal
+server.port=8085
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_portal
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
